@@ -1,7 +1,6 @@
 package name.richardson.james.bukkit.dimensiondoor;
 
 import java.io.Serializable;
-import java.util.HashMap;
 import java.util.LinkedHashMap;
 import java.util.Map;
 import java.util.UUID;
